<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blackmail</string>
    <string name="goal_map_activity">Goal Location Selection</string>
    <string name="goal_choices_activity">Choose Options for Goal</string>
    <string name="message_here">Enter your blackmail message here (you have room!)</string>
    <string name="about_activity">About</string>
    <string name="blackmail_choices_activity">Blackmail Choices</string>
    <string name="demo">Magic Demo Button</string>
    <string name="account_setup_activity">Account Setup</string>
    <string name="hello_world">Hello world!</string>
    <string name="accountTitle">Click a button to set up an account!</string>
    <string name="occurrenceTitle">Number of Occurrences:</string>
    <string name="takePicture">Take Picture</string>
    <string name="importPicture">Import Picture</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="BMchoice">Pick your poison:</string>
    <string name="pictureBM">Post a picture</string>
    <string name="textBM">Post a message</string>
    <string name="action_settings">Settings</string>
    <string name="backoutLabel">Backouts:</string>
    <string name="goal_name">Enter goal name here</string>
    <string name="goal_start_time">Not set</string>
    <string name="goal_end_time">Not set</string>
    <string name="goal_start_date">Not set</string>
    <string name="goal_end_date">Not set</string>
    <string name="create_goal">Create Goal</string>
    <string name="be_here">Ensure I\'m here</string>
    <string name="dont_be_here">Ensure I\'m not here</string>
    <string name="show_goals">Show Goals</string>
    <string name="account_setup">Account Setup</string>
    <string name="about">About</string>
    <string name="delete_goal_marker">Delete Marker</string>
    <string name="continue_planning">Continue</string>
    <string name="goalNameLabel">Name of Goal:</string> 
    <string name="platformLabel">Which platform do you want to use?</string>
    <string name="startTimeLabel">Time to start checking location:</string>
    <string name="endTimeLabel">Time to stop checking location:</string>
    <string name="startDateLabel">Date to start enforcing goal:</string>
    <string name="endDateLabel">Date to stop enforcing goal:</string>
    <string name="finish">Finish Setup</string>
    <string name="loggedTwitter">Logged into Twitter</string>
    <string name="login_to_twitter">Login to Twitter</string>
    <string name="login_to_facebook">Login to Facebook</string>
    <string name="loggedFacebook">Logged into Facebook</string>
    <string name="login_to_social">Register for Facebook or Twitter</string>
   <string name="twitter_callback">http://blackmail.android.app</string>
    <string name="twitter_consumer_key">WTchQTjvGFsbswbW6FTF8kFCL</string>
    <string name="twitter_consumer_secret">Ii1K2xzyVQCABMjIsYK2v0D6Q3S7soHYu3mYAPfPDMNMYVQEtd</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="share_instructions">Enter share message</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="test_update_status">Update Twitter Status</string>
    <string name="btn_share">Share</string>
    <string name="hello">Hello</string>
    <string name="test_twitter">Post set string and image</string>
    <string name="cancelled">Cancelled</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="app_id">287620624780477</string>
    <string name="photo_post">Photo Post</string>	
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>

</resources>
