<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <TextView
            android:id="@+id/accountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/accountTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="200dp"
    	android:orientation="vertical" >
        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/titlebg"
            android:orientation="vertical"
            android:visibility="visible" >

            <Button
                android:id="@+id/loginTwitterButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:background="#0080B4"
                android:text="@string/login_to_twitter"
                android:textColor="#fff" />
            
        </RelativeLayout>

       	<LinearLayout
       	    android:id="@+id/post_layout"
       	    android:layout_width="match_parent"
       	    android:layout_height="match_parent"
       	    android:background="@color/titlebg"
       	    android:gravity="center"
       	    android:orientation="vertical"
       	    android:visibility="gone" >

       	    <TextView
       	        android:id="@+id/user_name"
       	        android:layout_width="wrap_content"
       	        android:layout_height="0dp"
       	        android:layout_weight="1"
       	        android:gravity="center_horizontal"
       	        android:text="@string/loggedTwitter"
       	        android:textAppearance="?android:attr/textAppearanceLarge"
       	        android:textColor="#0080B4" />

       	    <Button
       	        android:id="@+id/updateTwitterButton"
       	        android:layout_width="wrap_content"
       	        android:layout_height="0dp"
       	        android:layout_marginTop="104dp"
       	        android:layout_weight="1"
       	        android:background="#0080B4"
       	        android:text="@string/test_twitter"
       	        android:textColor="#fff" />
       	</LinearLayout>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:background="@color/titlebg"
	    >

		<LinearLayout
		     android:id="@+id/facebook_layout"
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:background="@color/titlebg"
	    	android:orientation="vertical"
	    	 android:visibility="visible">
	
			<com.facebook.widget.LoginButton
			    android:id="@+id/login_button"
			    android:layout_width="268dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:layout_marginTop="50dp" />	       
		</LinearLayout>
	
	</LinearLayout>
</LinearLayout>